--- a/angular/angular-template/src/app/entities/entities-list/entities-list.component.html
+++ b/angular/angular-template/src/app/entities/entities-list/entities-list.component.html
@@ -1,1 +1,279 @@
-<p>entities-list works!</p>
+<!--<!DOCTYPE html>-->
+<!--<html lang="en">-->
+
+<head>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
+        integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous" />
+  <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
+          integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+          crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"
+          integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF"
+          crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="entities-list.component.css" />
+  <script src="https://kit.fontawesome.com/d3ad0e260e.js" crossorigin="anonymous"></script>
+  <title>Home</title>
+</head>
+
+<!--<body>-->
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="#">
+    <img src="image/1x/logo.png" width="30" height="30" class="d-inline-block align-top" alt="">
+    BREEDER
+  </a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"
+          aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+    <ul class="navbar-nav mr-auto ml-auto mt-2 mt-lg-0">
+      <li class="nav-item active">
+        <a class="nav-link text-uppercase" href="#">Trang chủ <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link text-uppercase" href="#">Tin tức</a>
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link text-uppercase" href="#">Về chúng tôi</a>
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link text-uppercase" href="#">Liên Hệ</a>
+      </li>
+    </ul>
+    <div class="dropleft">
+      <button type="button" class="btn btn-nav dropdown-toggle" id="dropdownMenuButton" data-toggle="dropdown"
+              aria-haspopup="true" aria-expanded="false">
+        Putin <i class="fa-solid fa-circle-user"></i>
+      </button>
+      <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+        <a class="dropdown-item item-function-1" href="#">
+          <i class="fa-solid fa-gears"></i> Quản lý hệ thống
+        </a>
+        <a class="dropdown-item item-function-2" href="#">
+          <i class="fa-solid fa-circle-info"></i> Quản lý thông tin đàn</a>
+        <a class="dropdown-item item-function-3" href="#">
+          <i class="fa-solid fa-carrot"></i> Quản lý thức ăn</a>
+        <a class="dropdown-item item-function-4" href="#">
+          <i class="fa-solid fa-book-medical"></i> Quản lý bệnh lý</a>
+        <a class="dropdown-item item-function-5" href="#">
+          <i class="fa-solid fa-truck-moving"></i> Quản lý xuất chuồng</a>
+        <a class="dropdown-item item-function-6" href="#" data-toggle="modal" data-target="#exampleModal">
+          <i class="fa-solid fa-right-from-bracket"></i> Đăng xuất</a>
+      </div>
+      <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+           aria-hidden="true">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLabel">
+                Hãy xác nhận!
+              </h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">Bạn có muốn đăng xuất không?</div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">
+                Không
+              </button>
+              <button type="button" class="btn btn-confirm-logout">
+                Có
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</nav>
+
+<div class="container-fluid  mt-4 mb-5" id="content">
+  <div class="row">
+    <div class="col-lg-3">
+      <ul class="list-group">
+        <li class="list-group-item d-flex justify-content-between align-items-center">
+          <img src="image/list1.webp" width="50" height="50" class="mr-2" alt="">
+          <a href=" " class="list-group-item-action">Nhu cầu dùng gạo làm thức ăn chăn nuôi ở châu Á
+            tăng mạnh</a>
+        </li>
+        <li class="list-group-item d-flex justify-content-between align-items-center">
+          <img src="image/Chan-Nuoi-Gia-Lon-Ho-01.jpg" width="50" height="50" class="mr-2" alt="">
+          <a href=" " class="list-group-item-action">Rất nhiều “nút thắt” lớn cần tháo gỡ để cứu ngành
+            chăn nuôi</a>
+        </li>
+        <li class="list-group-item d-flex justify-content-between align-items-center">
+          <img src="image/2.jpg" width="50" height="50" class="mr-2" alt="">
+          <a href=" " class="list-group-item-action">Quảng Trị: Gỡ vướng cho các dự án chăn nuôi lợn
+            công nghệ cao</a>
+        </li>
+        <li class="list-group-item d-flex justify-content-between align-items-center">
+          <img src="image/phan-bon-1-105638_53.webp" width="50" height="50" class="mr-2" alt="">
+          <a href=" " class="list-group-item-action">Bức tranh ngành thức ăn chăn nuôi trong
+            bối cảnh bão giá nguyên</a>
+        </li>
+      </ul>
+    </div>
+    <div class="col-lg-9">
+
+
+      <!--            table entities-->
+      <div style="">
+        <div class=" container1">
+          <div class="card" style="width: 100%;">
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item"><a href="#" id="editEmpLink"
+
+                                             class="w3-bar-item w3-button pt-2"><h1>Danh sách cá thể </h1></a></li>
+              <li class="list-group-item">
+                <div class="d-flex flex-row  d-flex justify-content-center mb-5">
+                  <div class="col-6" style="padding-top: 30px;margin-left: 160px">
+                    <div class="input-group">
+                      <div class="form-outline">
+                        <input id="search-focus" type="search" id="form1" class="form-control"
+                               placeholder="Nhập mã lợn"/>
+                      </div>
+                      <button type="button" class="btn btn-primary">
+                        <i class="fa fa-search"></i>
+                      </button>
+                    </div>
+                  </div>
+                </div>
+                <div class="table-wrapper-scroll-y my-custom-scrollbar">
+                  <table class="table">
+                    <thead>
+                    <tr>
+                      <th scope="col">Mã lợn</th>
+                      <th scope="col">Mã chuồng nuôi</th>
+                      <th scope="col">Ngày nhập chuồng</th>
+                      <th scope="col">Ngày xuất chuồng</th>
+                      <th scope="col">Tình trạng</th>
+                      <th scope="col">Cân nặng(kg)</th>
+                      <th scope="col">Sửa</th>
+                      <th scope="col">Xoá</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+
+                    <tr style="border: 1px black solid" *ngFor="let entity of entities2">
+                      <td>{{entity.entitiesId}}</td>
+                      <td>{{entity.cage}}</td>
+
+                      <td>{{entity.inDate}}</td>
+                      <td>{{entity.outDate}}</td>
+                      <td>{{entity.status}}</td>
+                      <td>{{entity.weight}}</td>
+                      <td>
+                        <button type="button" class="btn btn-primary"><i class="	fas fa-edit"></i></button>
+                      </td>
+<!--                      <td >-->
+<!--                        <button type="button" class="btn btn-danger" (click)="deleteEntities(entity)"><i class="fa fa-trash-o" ></i></button>-->
+<!--                      </td>-->
+
+                      <td >
+                        <button type="button" class="btn btn-danger" [routerLink]="['delete/'+entity.entitiesId]"><i class="fa fa-trash-o" ></i></button>
+                      </td>
+                      <td>
+                        <ng-container matcolumnDef="delete"></ng-container>
+                      </td>
+                    </tr>
+
+                    </tbody>
+                  </table>
+                </div>
+
+                  <ul class="nav nav-pills">
+                    <li class="nav-item" *ngFor="let p of pages;let i=index">
+                      <a class="nav-link " href="" (click)="setPage(i,$event)">{{i+1}}</a>
+                    </li>
+                  </ul>
+
+<!--                <div class="container">-->
+<!--                  <ul class="pagination">-->
+<!--                    <li class="page-item"><a class="page-link" href="#">Trước</a></li>-->
+<!--                    <li class="page-item"><a class="page-link" href="#">1</a></li>-->
+<!--                    <li class="page-item"><a class="page-link" href="#">2</a></li>-->
+<!--                    <li class="page-item"><a class="page-link" href="#">3</a></li>-->
+<!--                    <li class="page-item"><a class="page-link" href="#">4</a></li>-->
+<!--                    <li class="page-item"><a class="page-link" href="#">5</a></li>-->
+<!--                    <li class="page-item"><a class="page-link" href="#">Sau</a></li>-->
+<!--                  </ul>-->
+<!--                </div>-->
+                <div class="d-flex justify-content-left ">
+                  <button type="button" class="btn btn-nav m-3" data-toggle="modal" data-target="#modalDelete">
+                    <i class="fa fa-plus"></i></button>
+                </div>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<footer class="">
+  <div class="container py-5">
+    <div class="row">
+      <div class="col-lg-4 col-md-6 mb-4 mb-lg-0">
+        <img src="img/logo.png" alt="" width="180" class="mb-3"/>
+        <p class="font-italic text-muted">Kết nối với chúng tôi.</p>
+        <ul class="list-inline mt-4">
+          <li class="list-inline-item">
+            <a href="#" target="_blank" title="twitter"><i class="fa fa-twitter i-footer"></i></a>
+          </li>
+          <li class="list-inline-item">
+            <a href="#" target="_blank" title="facebook"><i class="fa fa-facebook i-footer"></i></a>
+          </li>
+          <li class="list-inline-item">
+            <a href="#" target="_blank" title="instagram"><i class="fa fa-instagram i-footer"></i></a>
+          </li>
+          <li class="list-inline-item">
+            <a href="#" target="_blank" title="pinterest"><i class="fa fa-pinterest i-footer"></i></a>
+          </li>
+          <li class="list-inline-item">
+            <a href="#" target="_blank" title="vimeo"><i class="fa fa-vimeo i-footer"></i></a>
+          </li>
+        </ul>
+      </div>
+      <div class="col-lg-2 col-md-6 mb-4 mb-lg-0">
+        <h6 class="text-uppercase font-weight-bold mb-4">Sản phẩm</h6>
+        <ul class="list-unstyled mb-0">
+          <li class="mb-2"><a href="#" class="text-muted">Thức Ăn</a></li>
+          <li class="mb-2"><a href="#" class="text-muted">Thuốc</a></li>
+          <li class="mb-2"><a href="#" class="text-muted">Giống</a></li>
+          <li class="mb-2"><a href="#" class="text-muted">Cá Thể</a></li>
+        </ul>
+      </div>
+      <div class="col-lg-2 col-md-6 mb-4 mb-lg-0">
+        <h6 class="text-uppercase font-weight-bold mb-4">Hệ thống</h6>
+        <ul class="list-unstyled mb-0">
+          <li class="mb-2"><a href="#" class="text-muted">Đăng nhập</a></li>
+          <li class="mb-2"><a href="#" class="text-muted">Đăng ký</a></li>
+        </ul>
+      </div>
+      <div class="col-lg-4 col-md-6 mb-lg-0">
+        <h6 class="text-uppercase font-weight-bold mb-4">Gửi ý kiến</h6>
+        <p class="text-muted mb-4">
+          Mọi thắc mắc xin liên hệ cho chúng tôi.
+        </p>
+        <div class="p-1 rounded border">
+          <div class="input-group">
+            <input type="email" placeholder="Enter your email address" aria-describedby="button-addon1"
+                   class="form-control border-0 shadow-0"/>
+            <div class="input-group-append">
+              <button id="button-addon1" type="submit" class="btn btn-link">
+                <i class="fa fa-paper-plane"></i>
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+</footer>
+<!--</body>-->
+
+<!--</html>-->
