--- a/angular/angular-template/src/app/component/header/header.component.html
+++ b/angular/angular-template/src/app/component/header/header.component.html
@@ -20,35 +20,24 @@
         <a class="nav-link text-uppercase" href="#">Liên Hệ</a>
       </li>
     </ul>
-<!--    <div class="dropleft">-->
+
+
+    <div class="dropleft">
       <div *ngIf="isLoggedIn then  loggedIn else notLogIn"></div>
 
       <ng-template #notLogIn>
-        <div class="dropleft">
-          <button type="button" [routerLink]="['/login']">
+          <button class="btn-logout" [routerLink]="['/login']">
             Đăng nhập <i class="fa-solid fa-circle-user"></i>
           </button>
-        </div>
       </ng-template>
 
 
       <ng-template #loggedIn>
-        <div class="dropleft">
-        <button type="button" class="btn btn-nav dropdown-toggle" id="dropdownMenuButton" data-toggle="dropdown"
-                data-offset="10,20" aria-expanded="false">{{username}} <i class="fa-solid fa-circle-user"></i>
+        <button class="btn-logout" (click)="openDialog()">
+          Đăng xuất <i class="fa-solid fa-right-from-bracket"></i>
         </button>
-
-        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-          <a class="dropdown-item" href="#"> <i class="fa-solid fa-gears"></i> Quản lý hệ thống </a>
-          <a class="dropdown-item" href="#"> <i class="fa-solid fa-circle-info"></i> Quản lý thông tin đàn</a>
-          <a class="dropdown-item" href="#"> <i class="fa-solid fa-carrot"></i> Quản lý thức ăn</a>
-          <a class="dropdown-item" href="#"> <i class="fa-solid fa-book-medical"></i> Quản lý bệnh lý</a>
-          <a class="dropdown-item" href="#"> <i class="fa-solid fa-truck-moving"></i> Quản lý xuất chuồng</a>
-          <a class="dropdown-item" type="button"  (click)="openDialog()"> <i class="fa-solid fa-right-from-bracket"></i> Đăng xuất</a>
-        </div>
-        </div>
       </ng-template>
-<!--    </div>-->
+    </div>
   </div>
 </nav>
 
